--- a/css/screen.scss
+++ b/css/screen.scss
@@ -160,6 +160,7 @@ html {
   font-family: $font-family-primary;
   line-height: 1.5;
   color: $color-text;
+  scroll-behavior: smooth;
 }
 
 /*
@@ -178,6 +179,7 @@ html {
 */
 
 h1 {
+
 }
 
 h2 {
