--- a/css/screen.scss
+++ b/css/screen.scss
@@ -179,18 +179,33 @@ html {
 */
 
 h1 {
-
+  font-size: $ms5;
+  font-weight: 700;
+  line-height: calc($baseline *4);
+  margin-bottom: $space-m;
 }
 
 h2 {
+  font-size: $ms5;
+  font-weight: 700;
+  line-height: calc($baseline *4);
+  margin-bottom: $space-m;
 }
 
 h3 {
+  font-size: $ms5;
+  font-weight: 700;
+  line-height: calc($baseline *4);
+  margin-bottom: $space-m;
 }
 
 h4,
 h5,
 h6 {
+  font-size: $ms5;
+  font-weight: 700;
+  line-height: calc($baseline *4);
+  margin-bottom: $space-m;
 }
 
 p,
@@ -200,35 +215,57 @@ dl,
 table,
 address,
 figure {
+  margin-bottom: $space-m;
 }
 
 ul,
 ol {
+  padding-left: 0;
+  list-style-position: inside;
 }
 
 li ul,
 li ol {
+  margin-bottom: 0;
 }
 
 blockquote {
+  font-family: $font-family-secondary;
+  font-style: italic;
+  font-size: $ms3;
+  line-height:  calc($baseline * 4);
 }
 
 figcaption {
+  font-size: $ms-1;
+  line-height: calc($baseline * 2);
+  margin-top: $space-xs;
+  color: $color-text-light;
+  margin-bottom: $space-m;
 }
 
 hr {
+  border: 0;
+  height: 1px;
+  background-color: $color-border;
+  margin-bottom: $space-m;
 }
 
 a {
-}
-
-a:hover {
+  color: $color-primary;
+  transition: 0.1s ease-in-out;
 }
 
 a:visited {
+  color: $color-primary;
+}
+
+a:hover {
+  color: $color-primary-light;
 }
 
 a:active {
+  color: $color-primary-dark;
 }
 
 /*---------------------------------------/*
