--- a/css/screen.css
+++ b/css/screen.css
@@ -72,6 +72,18 @@ h1 {
   line-height: 2rem;
   margin-bottom: 1.5rem;
 }
+@media (min-width: 36.0625em) {
+  h1 {
+    font-family: 2.8865075782rem;
+    line-height: 3rem;
+  }
+}
+@media (min-width: 48.0625em) {
+  h1 {
+    font-size: 3.6532361537rem;
+    line-height: 4rem;
+  }
+}
 
 h2 {
   font-size: 1.8020324707rem;
@@ -164,6 +176,10 @@ a:active {
     ---
     Creates a horizontal row with padding
 */
+.o-row {
+  padding: 1.5rem 1.5rem 0;
+}
+
 /*
     Objects: Container
     ---
