--- a/css/screen.scss
+++ b/css/screen.scss
@@ -1,3 +1,32 @@
+// Media Query mixin
+// @include mq(#point, #query1, #query2);
+//
+
+@mixin mq($breakpoint, $query1: min, $query2: width) {
+  $query: map-get($breakpoints, $breakpoint);
+
+  @if $query != null {
+  @media (#{$query1}-#{$query2}: #{$query}) {
+  @content;
+  }
+  } @else {
+  @media (#{$query1}-#{$query2}: $breakpoint) {
+  @content;
+  }
+  }
+}
+// ---
+// Settings: Breakpoints
+// ---
+
+$breakpoints: (
+  bp1: calc(577 / 16 * 1em),
+  bp2: calc(769 / 16 * 1em),
+  bp3: calc(993 / 16 * 1em),
+  bp4: calc(1201 / 16 * 1em),
+  bp5: calc(1401 / 16 * 1em),
+) !default;
+
 /*---------------------------------------/*
  # TOOLS
 /*---------------------------------------*/
@@ -183,6 +212,16 @@ h1 {
   font-weight: 700;
   line-height: calc($baseline *4);
   margin-bottom: $space-m;
+
+  @include mq(bp1) {
+    font-family: $ms9;
+    line-height: calc($baseline * 6);
+  }
+
+  @include mq(bp2) {
+    font-size: $ms11;
+    line-height: calc($baseline * 8);
+  }
 }
 
 h2 {
@@ -279,6 +318,7 @@ a:active {
 */
 
 .o-row {
+  padding: $space-m $space-m 0;
 }
 
 /*
