--- a/css/screen.css
+++ b/css/screen.css
@@ -178,6 +178,16 @@ a:active {
 */
 .o-row {
   padding: 1.5rem 1.5rem 0;
+  display: flow-root;
+}
+
+.o-row--primary {
+  background-color: hsl(198.0786026201, 100%, 40%);
+}
+
+.o-row--dark {
+  background-color: hsl(198.0786026201, 10%, 10%);
+  color: white;
 }
 
 /*
@@ -185,6 +195,11 @@ a:active {
     ---
     Creates a horizontal container that sets de global max-width
 */
+.o-container {
+  max-width: 50rem;
+  margin: auto;
+}
+
 /*
     Objects: Layout
     ---
